--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "globals": "^16.0.0",
     "html-webpack-plugin": "^5.6.3",
     "husky": "^9.1.7",
+    "jest": "^29.7.0",
     "lint-staged": "^14.0.1",
     "prettier": "^3.5.3",
     "style-loader": "^4.0.0",
@@ -21,7 +22,8 @@
   "scripts": {
     "lint": "eslint .",
     "start": "webpack serve --open",
-    "build": "webpack"
+    "build": "webpack",
+    "test": "jest"
   },
   "lint-staged": {
     "**/*.{js,mjs,cjs,html}": [
